fix some spacing

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -51,7 +51,11 @@ main {
     color: var(--light-h);
     opacity: 1;
     letter-spacing: initial;
-    margin-bottom: 1.5rem;
+    margin-bottom: 3.5rem;
+
+    @media screen and (min-width: 1024px) {
+      margin-bottom: 1.5rem;
+    }
   }
 }
 
